Removed libs, Koan Answers are working expect events All the Koan answers are complete expect:   events works with the document object, which won't work in a node only   environment.   Advanced Streams is passing expect one test which does not seem to be   part of the original Rx Java Koans
The actual questions are not updated yet;

--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   },
   "homepage": "https://github.com/BerkeleyTrue/koansRxJS",
   "dependencies": {
+    "chai": "^1.9.1",
+    "gulp": "^3.8.6",
+    "gulp-mocha": "^0.5.1",
+    "mocha": "^1.21.0",
     "rx": "^2.2.27"
   }
 }
